--- a/modules/axelor-person/src/main/resources/views/Contact.xml
+++ b/modules/axelor-person/src/main/resources/views/Contact.xml
@@ -3,32 +3,40 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
 
+  <selection name="contact.status.selection">
+    <option value="pending">Pending</option>
+    <option value="deactive">DeActive</option>
+    <option value="active">Active</option>
+    <option value="deleted">Deleted</option>
+  </selection>
 
-
-  <tree name="contact-email-tree" title="Contact Email Tasks" width="50%">
+  <tree name="contact-email-tree" title="Contact Email Tasks"
+    width="50%">
 
     <!-- define tree columns -->
     <column name="firstName" type="string" />
     <column name="email" type="string" />
 
     <!-- define 1st level node -->
-    <node model="com.axelor.person.db.Contact" onClick="contacts.task.open.contact">
+    <node model="com.axelor.person.db.Contact"
+      onClick="contacts.task.open.contact">
       <field name="firstName" as="firstName" />
     </node>
 
     <!-- define 2nd level node -->
-    <node model="com.axelor.person.db.Email" parent="contact" draggable="true" >
+    <node model="com.axelor.person.db.Email" parent="contact"
+      draggable="true">
       <field name="email" as="email" />
     </node>
   </tree>
 
   <cards name="person-cards" title="Persons"
-    model="com.axelor.person.db.Contact" orderBy="fullName" >
+    model="com.axelor.person.db.Contact" orderBy="fullName">
     <field name="fullName" />
     <field name="phone" />
-    <field name="email"/>
-    <field name="address"/>
-    <field name="hasImage"/>
+    <field name="email" />
+    <field name="address" />
+    <field name="hasImage" />
     <template><![CDATA[
       <div class="span4 card-image">
         <img ng-if="hasImage" ng-src="{{$image(null, 'image')}}">
@@ -50,9 +58,9 @@
   <form model="com.axelor.person.db.Contact" title="Person Form"
     name="person-form">
     <panel title="Personal" css="panel-red">
-        <panel colSpan="4">
-          <field name="image" showTitle="false" colSpan="12"></field>
-        </panel>
+      <panel colSpan="4">
+        <field name="image" showTitle="false" colSpan="12"></field>
+      </panel>
       <panel colSpan="8">
         <field name="fullName" title="Name" readonly="false"
           colSpan="12">
@@ -62,7 +70,9 @@
             <field name="lastName" colSpan="5" />
           </editor>
         </field>
-        <field name="dateOfBirth" colSpan="7" />
+        <field name="dateOfBirth" colSpan="6" />
+        <field name="status" selection="contact.status.selection"
+          colSpan="6" />
       </panel>
     </panel>
     <panel title="Contacts" css="panel-green">
@@ -95,7 +105,7 @@
     </panel>
 
     <panel title="Notes">
-      <field name="notes" showTitle="false" colSpan="12"  />
+      <field name="notes" showTitle="false" colSpan="12" />
     </panel>
     <panel sidebar="true">
       <field name="createdOn" />
@@ -104,37 +114,33 @@
   </form>
 
 
-
-  <kanban name="contact-task-kanban" title="Contact Tasks" model="com.axelor.person.db.Contact"
-    columnBy="state" sequenceBy="priority" onNew="project.task.kanban.on.new" limit="10">
-    <field name="name"/>
-    <field name="notes" />
-    <field name="progress"/>
-    <field name="startDate"/>
-    <field name="endDate"/>
-    <field name="user"/>
-    <hilite color="danger" if="progress == 0" />
-    <hilite color="success" if="progress == 100" />
-    <hilite color="info" if="progress >= 50" />
-    <hilite color="warning" if="progress > 0" />
+  <kanban name="person-kanban" sequenceBy="firstName"
+    model="com.axelor.person.db.Contact" columnBy="status"
+    title="Person Details">
+    <field name="firstName" />
+    <field name="lastName" />
+    <field name="fullName" />
+    <field name="email" />
+    <field name="phone" />
+    <field name="image" />
     <template><![CDATA[
-    <h4>{{name}}</h4>
-    <img ng-if="user" ng-src="{{$image('user', 'image')}}">
-    <div class="card-body">{{notes}}</div>
-    <div class="card-footer">
-      <i class='fa fa-clock-o'></i> <span>{{startDate|date:'yyyy-MM-dd HH:mm:ss'}}</span>
-    </div>
-    ]]></template>
+        <h4>{{firstName}}</h4>
+        <div class="card-body">{{notes}}</div>
+        <div class="card-footer">
+          <i class='fa fa-clock-o'></i> <span>{{lastName}}</span>
+        </div>
+      ]]></template>
+
   </kanban>
 
 
-
-  <action-view name="contacts.task.open.contact" title="Contact" model="com.axelor.person.db.Contact">
-    <view type="grid" name="person-grid"/>
-    <view type="form" name="project-form"/>
+  <action-view name="contacts.task.open.contact"
+    title="Contact" model="com.axelor.person.db.Contact">
+    <view type="grid" name="person-grid" />
+    <view type="form" name="project-form" />
     <domain>self.id= :contact_id</domain>
-    <context name="project_id" expr="eval: id"/>
-    <context name="_showSingle" expr="true"/>
+    <context name="project_id" expr="eval: id" />
+    <context name="_showSingle" expr="true" />
   </action-view>
 
 </object-views>
