--- a/modules/axelor-person/src/main/resources/views/Company.xml
+++ b/modules/axelor-person/src/main/resources/views/Company.xml
@@ -3,5 +3,24 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
 
-  <form model="com.axelor.person.db.Company" title="" name=""></form>
-  </object-views>
+  <form model="com.axelor.person.db.Company" title=""
+    name="company-form">
+    <panel>
+      <field name="code" />
+      <field name="name" />
+      <field name="parent" title="Parent Comapany" />
+    </panel>
+    <panel>
+      <field name="note" />
+    </panel>
+    <panel>
+      <field name="emails"/>
+    </panel>
+  </form>
+  <grid model="com.axelor.person.db.Company" title="Company Details" name="company-grid">
+    <field name="code"/>
+    <field name="name"/>
+    <field name="parent"/>
+    <field name="emails"/>
+  </grid>
+</object-views>
