--- a/modules/axelor-sale/src/main/resources/views/Order.xml
+++ b/modules/axelor-sale/src/main/resources/views/Order.xml
@@ -1,46 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <object-views xmlns="http://axelor.com/xml/ns/object-views"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
 
-  <form model="com.axelor.sale.db.Order" title="Order Details"
-    name="order-form">
+	<grid model="com.axelor.sale.db.Order" title="Order Details"
+		name="order-grid">
+		<field name="orderNo" />
+		<field name="orderDate" />
+		<field name="customer" />
+		<field name="totalQuantity" />
+		<field name="totalTax" />
+		<field name="totalPrice" />
+		<field name="orderStatus" />
+	</grid>
 
-    <panel>
-      <panel colSpan="12" >
-        <field name="orderStatus" widget="nav-select" readonly="true"></field>
-      </panel>
-    </panel>
+	<form model="com.axelor.sale.db.Order" title="Order Details"
+		name="order-form">
+		<panel>
+			<panel colSpan="12">
+				<field name="orderStatus" widget="nav-select"
+					readonlyIf="!confirmed"></field>
+			</panel>
+		</panel>
+		<panel>
+			<panel colSpan="4">
+				<field name="orderDate" />
+			</panel>
+			<panel colSpan="4">
+				<field name="customer" />
+			</panel>
 
-    <panel>
-      <panel colSpan="4">
-        <field name="orderDate" />
-      </panel>
-      <panel colSpan="4">
-        <field name="customer"/>
-      </panel>
+			<panel colSpan="4">
+				<field name="confirmDate" />
+				<field name="confirmed" widget="boolean-switch" />
+			</panel>
+		</panel>
 
-      <panel colSpan="4">
-        <field name="confirmDate" />
-        <field name="confirmed" widget="boolean-switch"/>
-      </panel>
+		<panel-related field="saleProducts" editable="true">
+			<field name="product"></field>
+			<field name="price"></field>
+			<field name="taxes"></field>
+			<field name="quantity"
+				onChange="action-method-on-change-set-product-total"></field>
+			<field name="productTotal" readonly="true"></field>
+		</panel-related>
+
+		<panel>
+			<button colSpan="3" name="totalAmount" if="!saleProducts"
+				onClick="action-method-on-change-set-order-total"
+				title="Calculate Total Amt" widget="info-button" css="btn-primary" />
+			<field colOffset="10" title="Tot Qty" readonly="true"
+				name="totalQuantity"></field>
+			<field colOffset="10" name="totalPrice" readonly="true"></field>
+		</panel>
+
+	</form>
+
+	<action-method
+		name="action-method-on-change-set-product-total">
+		<call class="com.axelor.sale.db.web.OrderController"
+			method="setProductTotal" />
+
+	</action-method>
+
+	<action-method
+		name="action-method-on-change-set-order-total">
+		<call class="com.axelor.sale.db.web.OrderController"
+			method="setTotalAmount" />
+	</action-method>
 
 
-    </panel>
-
-
-    <panel-related field="saleProducts" editable="true">
-      <field name="product"></field>
-      <field name="price"></field>
-      <field name="taxes"></field>
-      <field name="quantity"></field>
-      <field name="productTotal"></field>
-    </panel-related>
-  </form>
-
-
-
-
+	<action-group name="action-group-on-change-set-total">
+		<action name="action-method-on-change-set-product-total" />
+		<action name="action-method-on-change-set-order-total" />
+	</action-group>
 
 
 </object-views>
