--- a/modules/axelor-sale/src/main/resources/views/Order.xml
+++ b/modules/axelor-sale/src/main/resources/views/Order.xml
@@ -1,79 +1,129 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <object-views xmlns="http://axelor.com/xml/ns/object-views"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://axelor.com/xml/ns/object-views http://axelor.com/xml/ns/object-views/object-views_5.2.xsd">
 
-	<grid model="com.axelor.sale.db.Order" title="Order Details"
-		name="order-grid">
-		<field name="orderNo" />
-		<field name="orderDate" />
-		<field name="customer" />
-		<field name="totalQuantity" />
-		<field name="totalTax" />
-		<field name="totalPrice" />
-		<field name="orderStatus" />
-	</grid>
-
-	<form model="com.axelor.sale.db.Order" title="Order Details"
-		name="order-form">
-		<panel>
-			<panel colSpan="12">
-				<field name="orderStatus" widget="nav-select"
-					readonlyIf="!confirmed"></field>
-			</panel>
-		</panel>
-		<panel>
-			<panel colSpan="4">
-				<field name="orderDate" />
-			</panel>
-			<panel colSpan="4">
-				<field name="customer" />
-			</panel>
-
-			<panel colSpan="4">
-				<field name="confirmDate" />
-				<field name="confirmed" widget="boolean-switch" />
-			</panel>
-		</panel>
-
-		<panel-related field="saleProducts" editable="true">
-			<field name="product"></field>
-			<field name="price"></field>
-			<field name="taxes"></field>
-			<field name="quantity"
-				onChange="action-method-on-change-set-product-total"></field>
-			<field name="productTotal" readonly="true"></field>
-		</panel-related>
-
-		<panel>
-			<button colSpan="3" name="totalAmount" if="!saleProducts"
-				onClick="action-method-on-change-set-order-total"
-				title="Calculate Total Amt" widget="info-button" css="btn-primary" />
-			<field colOffset="10" title="Tot Qty" readonly="true"
-				name="totalQuantity"></field>
-			<field colOffset="10" name="totalPrice" readonly="true"></field>
-		</panel>
-
-	</form>
-
-	<action-method
-		name="action-method-on-change-set-product-total">
-		<call class="com.axelor.sale.db.web.OrderController"
-			method="setProductTotal" />
-
-	</action-method>
-
-	<action-method
-		name="action-method-on-change-set-order-total">
-		<call class="com.axelor.sale.db.web.OrderController"
-			method="setTotalAmount" />
-	</action-method>
+  <grid model="com.axelor.sale.db.Order" title="Order Details"
+    name="order-grid">
+    <field name="orderNo" />
+    <field name="orderDate" />
+    <field name="customer" />
+    <field name="totalQuantity" />
+    <field name="totalTax" />
+    <field name="totalPrice" />
+    <field name="orderStatus" />
+  </grid>
 
 
-	<action-group name="action-group-on-change-set-total">
-		<action name="action-method-on-change-set-product-total" />
-		<action name="action-method-on-change-set-order-total" />
-	</action-group>
+  <form model="com.axelor.sale.db.Order" title="Order Details"
+    name="order-form">
+    <panel>
+      <panel colSpan="12" >
+        <field name="orderStatus" widget="nav-select" 
+          readonlyIf="!confirmed"></field>
+      </panel>
+    </panel>
+
+    <panel itemSpan="3">
+      <button name="statusDraftBtn" css="btn-primary" title="Draft"
+        showIf="orderStatus !='DRAFT' &amp;&amp; orderStatus !='OPEN' &amp;&amp; orderStatus !='CLOSED'"
+        onClick="action-sale-order-attrs-on-click-change-statusDraft"
+         />
+      <button name="statusDraftBtn" css="btn-success" title="Open"
+        showIf="orderStatus !='OPEN' &amp;&amp; orderStatus !='CLOSED' &amp;&amp; orderStatus !='CANCELED'"
+        onClick="action-sale-order-attrs-on-click-change-statusOpen"
+        />
+      <button name="statusDraftBtn" css="btn-warning" title="Closed"
+        showIf="orderStatus !='CLOSED' &amp;&amp; orderStatus !='CANCELED'"
+        onClick="action-sale-order-attrs-on-click-change-statusClosed"
+         />
+      <button name="statusDraftBtn" css="btn-danger"
+        title="Canceled" showIf="orderStatus !='CANCELED'"
+        onClick="action-sale-order-attrs-on-click-change-statusCanceled"
+         />
+    </panel>
+
+
+    <panel>
+      <panel colSpan="4">
+        <field name="orderDate" />
+      </panel>
+      <panel colSpan="4">
+        <field name="customer" />
+      </panel>
+
+      <panel colSpan="4">
+        <field name="confirmDate" />
+        <field name="confirmed" widget="boolean-switch" />
+      </panel>
+    </panel>
+
+    <panel-related field="saleProducts" editable="true">
+      <field name="product"></field>
+      <field name="price"></field>
+      <field name="taxes"></field>
+      <field name="quantity"
+        onChange="action-method-on-change-set-product-total"></field>
+      <field name="productTotal" readonly="true"></field>
+    </panel-related>
+
+    <panel>
+      <button colSpan="3" name="totalAmount" if="!saleProducts"
+        onClick="action-method-on-change-set-order-total"
+        title="Calculate Total Amt" widget="info-button" css="btn-primary" />
+      <field colOffset="10" title="Tot Qty" readonly="true"
+        name="totalQuantity"></field>
+      <field colOffset="10" name="totalPrice" readonly="true"></field>
+    </panel>
+  </form>
+
+
+  <action-attrs
+    name="action-sale-order-attrs-on-click-change-statusDraft">
+    <attribute name="value" for="orderStatus"
+      expr="eval:orderStatus='DRAFT'" />
+  </action-attrs>
+
+  <action-attrs
+    name="action-sale-order-attrs-on-click-change-statusOpen">
+    <attribute name="value" for="orderStatus"
+      expr="eval:orderStatus='OPEN'" />
+  </action-attrs>
+
+  <action-attrs
+    name="action-sale-order-attrs-on-click-change-statusClosed">
+    <attribute name="value" for="orderStatus"
+      expr="eval:orderStatus='CLOSED'" />
+  </action-attrs>
+
+
+
+  <action-attrs
+    name="action-sale-order-attrs-on-click-change-statusCanceled">
+    <attribute name="value" for="orderStatus"
+      expr="eval:orderStatus='CANCELED'" />
+  </action-attrs>
+
+
+  <action-method
+    name="action-method-on-change-set-product-total">
+    <call class="com.axelor.sale.db.web.OrderController"
+      method="setProductTotal" />
+
+  </action-method>
+
+  <action-method
+    name="action-method-on-change-set-order-total">
+    <call class="com.axelor.sale.db.web.OrderController"
+      method="setTotalAmount" />
+     
+  </action-method>
+
+
+  <action-group name="action-group-on-change-set-total">
+    <action name="action-method-on-change-set-product-total" />
+    <action name="action-method-on-change-set-order-total" />
+  </action-group>
 
 
 </object-views>
